TECH-1925 add staging db

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,9 +17,13 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
+  username: <%= ENV.fetch('POSTGRES_USER', 'postgres') %>
+  password: <%= ENV.fetch('POSTGRES_PASSWORD', '') %>
+  host: <%= ENV.fetch('POSTGRES_HOST', 'localhost') %>
+  database: <%= ENV["POSTGRES_DATABASE"] %>
+  port: <%= ENV.fetch('POSTGRES_PORT', 5432) %>
+
 
 development:
   <<: *default
@@ -78,6 +82,10 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+
+staging:
+  <<: *default
+
 production:
   <<: *default
   database: quality_inventory_production
